Refactor documentation for unified daemon architecture, SSE transport, and updated testing structure